--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="center">
     <h1>Coming Soon</h1>
     <hr style="border:1px sold #FFF; color:#FFF" />
-    <p>This wesite is under development! Please come ack another time. Thank You</p>
+    <p>This wesite is under development! Please come back another time. Thank You</p>
   </div>
 </body>
 </html>
